Añadir la opcion de actualizar producto en la BD y arregle un bug al agregar un producto nuevo

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -32,6 +32,9 @@
                     <a class="nav-link" href="/addProduct">Añadir Producto</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/updateProduct">Actualizar Producto</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" <% if (login) { %>
                         <a href="#"> <%=username%> </a>
                         <li class="nav-item">
@@ -45,6 +48,9 @@
                         </li>
                         <%}%>
                     </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact">Contacto</a>
                 </li>
                
             </ul>
