--- a/views/updateProduct.ejs
+++ b/views/updateProduct.ejs
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Login</title>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>addProduct</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
             crossorigin="anonymous"
         />
-
         <style>
             .bd-placeholder-img {
                 font-size: 1.125rem;
@@ -29,51 +29,70 @@
         <link href="css/signin.css" rel="stylesheet" />
     </head>
 
-    <body class="text-center">
-        
+    <body>
+        <% if (login) { %> 
+            <%-include('header',{login:login,username:username}); -%> 
+        <% }else{ %> 
+            <%-include('header',{login:login}); -%> 
+        <%}%>
         <main class="form-signin">
-            <form id="loginForm" action="/contact" method="POST">
+            <form id="updateform" action="/admin/update-product" method="POST">
                 <img
                     class="mb-4"
                     src="img/logo.svg"
-                    alt="logo"
+                    alt=""
                     width="80"
                     height="67"
                 />
-                <h1 class="h3 mb-3 fw-normal">Contacto</h1>
+                <h1 class="h3 mb-3 fw-normal">Actualizar Producto</h1>
                 <div class="form-floating">
                     <input
-                        type="email"
+                        type="number"
                         class="form-control"
                         id="floatingInput"
-                        name="email"
-                        placeholder="email"
+                        name="sku"
+                        placeholder="SKU"
                     />
-                    <label for="floatingInput">Correo electronico</label>
+                    <label for="floatingInput">SKU</label>
                 </div>
+
                 <div class="form-floating">
                     <input
                         type="text"
                         class="form-control"
                         id="floatingInput"
-                        name="subject"
-                        placeholder="Asunto"
+                        name="name"
+                        placeholder="Nombre"
                     />
-                    <label for="floatingInput">Asunto</label>
+                    <label for="floatingInput">Nombre</label>
                 </div>
                 <div class="form-floating">
-                    <textarea
+                    <input
+                        type="text"
                         class="form-control"
-                        id="floatingInput"
-                        name="text"
-                        placeholder="Ingresa aqui tu consulta"
-                    >
-                    </textarea>
-                    <label for="floatingPassword">Cúentanos</label>
+                        id="floatingPassword"
+                        name="description"
+                        placeholder="Descripción"
+                    />
+                    <label for="floatingPassword">Descripción</label>
                 </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">
-                    Enviar
+                <div class="form-floating">
+                    <input
+                        type="number"
+                        class="form-control"
+                        id="floatingPassword"
+                        name="price"
+                        placeholder="Precio"
+                    />
+                    <label for="floatingPassword">Precio</label>
+                </div>
+               
+                <div style="padding: 12px">
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">
+                    Actualizar Producto
                 </button>
+                </div>
+                
             </form>
         </main>
         <%- include ('footer'); -%>
