completar footer - crear vistas varias - arreglo errores varios

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,44 +1,5 @@
 <footer class="bg-dark text-center text-white">
     <div class="container p-4">
-        <section class="mb-4">
-            <a
-                class="btn btn-outline-light btn-floating m-1"
-                href="https://www.facebook.com/gaming/ignaciosapbe"
-                role="button"
-                ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a
-                class="btn btn-outline-light btn-floating m-1"
-                href="#!"
-                role="button"
-                ><i class="fab fa-twitter"></i
-            ></a>
-            <a
-                class="btn btn-outline-light btn-floating m-1"
-                href="#!"
-                role="button"
-                ><i class="fab fa-google"></i
-            ></a>
-            <a
-                class="btn btn-outline-light btn-floating m-1"
-                href="#!"
-                role="button"
-                ><i class="fab fa-instagram"></i
-            ></a>
-            <a
-                class="btn btn-outline-light btn-floating m-1"
-                href="#!"
-                role="button"
-                ><i class="fab fa-linkedin-in"></i
-            ></a>
-
-            <a
-                class="btn btn-outline-light btn-floating m-1"
-                href="#!"
-                role="button"
-                ><i class="fab fa-github"></i
-            ></a>
-        </section>
         <section class="">
             <form action="">
                 <div class="row d-flex justify-content-center">
@@ -85,16 +46,17 @@
 
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="#!" class="text-white">Link 1</a>
+                            <a href="/contact" class="text-white"
+                                >Contáctanos</a
+                            >
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 2</a>
+                            <a href="#!" class="text-white">+569 8751 9595</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 3</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-white">Link 4</a>
+                            <a href="#!" class="text-white"
+                                >paytoowin@gmail.com</a
+                            >
                         </li>
                     </ul>
                 </div>
@@ -103,34 +65,35 @@
 
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="#!" class="text-white">Link 1</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-white">Link 2</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-white">Link 3</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-white">Link 4</a>
+                            <a href="/nosotros" class="text-white"
+                                >¿Quiénes somos?</a
+                            >
                         </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Administrativo</h5>
+                    <h5 class="text-uppercase">Redes Sociales</h5>
 
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="#!" class="text-white">Link 1</a>
+                            <a
+                                href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw"
+                                class="text-white"
+                                >Facebook</a
+                            >
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 2</a>
+                            <a
+                                href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw"
+                                class="text-white"
+                                >Youtube</a
+                            >
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 3</a>
+                            <a href="https://twitter.com/home" class="text-white">Twitter</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 4</a>
+                            <a href="https://www.instagram.com/" class="text-white">Instagram</a>
                         </li>
                     </ul>
                 </div>
@@ -139,16 +102,10 @@
 
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="#!" class="text-white">Link 1</a>
+                            <a href="#!" class="text-white">Productos</a>
                         </li>
                         <li>
-                            <a href="#!" class="text-white">Link 2</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-white">Link 3</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-white">Link 4</a>
+                            <a href="#!" class="text-white">Errores</a>
                         </li>
                     </ul>
                 </div>
