--- a/views/nosotros.ejs
+++ b/views/nosotros.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Login</title>
+        <title>Quiénes Somos</title>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -30,13 +30,10 @@
     </head>
 
     <body class="text-center">
-        <% if (login) { %> 
-            <%-include('header',{login:login,username:username}); -%> 
-        <% }else{ %> 
-            <%-include('header',{login:login}); -%> 
-        <%}%>
+        <% if (login) { %> <%-include('header',{login:login,username:username});
+        -%> <% }else{ %> <%-include('header',{login:login}); -%> <%}%>
         <main class="form-signin">
-            <form id="loginForm" action="/contact" method="POST">
+            <div>
                 <img
                     class="mb-4"
                     src="img/logo.svg"
@@ -44,41 +41,25 @@
                     width="80"
                     height="67"
                 />
-                <h1 class="h3 mb-3 fw-normal">Contacto</h1>
-                <div class="form-floating">
-                    <input
-                        type="email"
-                        class="form-control"
-                        id="floatingInput"
-                        name="email"
-                        placeholder="email"
-                    />
-                    <label for="floatingInput">Correo electronico</label>
+                <h1 class="h3 mb-3 fw-normal">Nosotros</h1>
+
+                <div>
+                    <p class="lead">
+                        PayTooWin es un emprendimiento nacido de la aficion de
+                        uno de los fundadores de la empresa, Fabian Escobar, por
+                        el juego Dark Orbit.
+                    </p>
                 </div>
-                <div class="form-floating">
-                    <input
-                        type="text"
-                        class="form-control"
-                        id="floatingInput"
-                        name="subject"
-                        placeholder="Asunto"
-                    />
-                    <label for="floatingInput">Asunto</label>
-                </div>
-                <div class="form-floating">
-                    <textarea
-                        class="form-control"
-                        id="floatingInput"
-                        name="text"
-                        placeholder="Ingresa aqui tu consulta"
-                    >
-                    </textarea>
-                    <label for="floatingPassword">Cúentanos</label>
-                </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">
-                    Enviar
-                </button>
-            </form>
+                
+            </div>
+            <div class="m-0 row justify-content-center">
+                <img
+                    class="mb-4"
+                    src="img/slider-1.jpg"
+                    alt="logo"
+                    width="500"
+                />
+            </div>
         </main>
         <%- include ('footer'); -%>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
