--- a/views/products.ejs
+++ b/views/products.ejs
@@ -30,7 +30,7 @@
 
             
         
-                <div class="row container-fluid">
+        <div class="m-0 row justify-content-center">
                     <div class="col-sm-3">
                         <div class="card">
                             <div class="card-body">
