--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -102,7 +102,7 @@
 
                     <ul class="list-unstyled mb-0">
                         <li>
-                            <a href="#!" class="text-white">Productos</a>
+                            <a href="/baned-account" class="text-white">Productos</a>
                         </li>
                         <li>
                             <a href="#!" class="text-white">Errores</a>
