--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,7 +21,7 @@
                         >Home</a
                     >
                 </li>
-                
+
                 <li class="nav-item">
                     <a class="nav-link" href="/products">Compra</a>
                 </li>
@@ -32,7 +32,9 @@
                     <a class="nav-link" href="/addProduct">Añadir Producto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/updateProduct">Actualizar Producto</a>
+                    <a class="nav-link" href="/updateProduct"
+                        >Actualizar Producto</a
+                    >
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" <% if (login) { %>
@@ -52,19 +54,19 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contacto</a>
                 </li>
-               
             </ul>
-            
-            <form class="d-flex" role="search">
+
+            <form action="/admin/find-product" method="POST" class="d-flex">
                 <input
-                    class="form-control me-2"
                     type="search"
-                    placeholder="Search"
+                    class="form-control me-2"
+                    name="sku"
                     aria-label="Search"
                 />
                 <button class="btn btn-outline-success" type="submit">
                     Search
                 </button>
+                
             </form>
         </div>
     </div>
