Actualice las rutas eliminado la ruta /admin

--- a/views/updateProduct.ejs
+++ b/views/updateProduct.ejs
@@ -36,7 +36,7 @@
             <%-include('header',{login:login}); -%> 
         <%}%>
         <main class="form-signin">
-            <form id="updateform" action="/admin/update-product" method="POST">
+            <form id="updateform" action="updateProduct" method="POST">
                 <img
                     class="mb-4"
                     src="img/logo.svg"
