--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -36,7 +36,7 @@
             <%-include('header',{login:login}); -%> 
         <%}%>
         <main class="form-signin">
-            <form id="registerForm" action="/admin/add-product" method="POST">
+            <form id="registerForm" action="addProduct" method="POST">
                 <img
                     class="mb-4"
                     src="img/logo.svg"
