Actualizacion a un footer minimalista

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,119 +1,42 @@
+
 <footer class="bg-dark text-center text-white">
-    <div class="container p-4">
-        <section class="">
-            <form action="">
-                <div class="row d-flex justify-content-center">
-                    <div class="col-auto">
-                        <p class="pt-2">
-                            <strong>Subscribete a nuestro newsletter</strong>
-                        </p>
-                    </div>
-                    <div class="col-md-5 col-12">
-                        <div class="form-outline form-white mb-4">
-                            <input
-                                type="email"
-                                id="form5Example21"
-                                class="form-control"
-                            />
-                            <label class="form-label" for="form5Example21"
-                                >Correo electronico</label
-                            >
-                        </div>
-                    </div>
-                    <div class="col-auto">
-                        <button
-                            type="submit"
-                            class="btn btn-outline-light mb-4"
-                        >
-                            Subscribirse
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </section>
-        <section class="mb-4">
-            <p>
-                Para mayor información sobre nuestra empres, visita nuestras
-                redes sociales o comunícate con nosotros a través de los números
-                de contacto o nuestro formulario de atención al cliente.
-                Esteremos felíces de poder ayudarter!
-            </p>
-        </section>
-        <section class="">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Servicio al cliente</h5>
-
-                    <ul class="list-unstyled mb-0">
-                        <li>
-                            <a href="/contact" class="text-white"
-                                >Contáctanos</a
-                            >
-                        </li>
-                        <li>
-                            <a href="#!" class="text-white">+569 8751 9595</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-white"
-                                >paytoowin@gmail.com</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Nosotros</h5>
-
-                    <ul class="list-unstyled mb-0">
-                        <li>
-                            <a href="/nosotros" class="text-white"
-                                >¿Quiénes somos?</a
-                            >
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Redes Sociales</h5>
-
-                    <ul class="list-unstyled mb-0">
-                        <li>
-                            <a
-                                href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw"
-                                class="text-white"
-                                >Facebook</a
-                            >
-                        </li>
-                        <li>
-                            <a
-                                href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw"
-                                class="text-white"
-                                >Youtube</a
-                            >
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/home" class="text-white">Twitter</a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/" class="text-white">Instagram</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Reporta</h5>
-
-                    <ul class="list-unstyled mb-0">
-                        <li>
-                            <a href="/baned-account" class="text-white">Productos</a>
-                        </li>
-                        <li>
-                            <a href="#!" class="text-white">Errores</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+    <div class="container p-4 pb-0">
+      <section class="mb-4">
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/ignaciosapbe" role="button"
+          >
+          <img
+                    class="mb-4"
+                    src="img/facebook.png"
+                    alt=""
+                    width="30"
+                    height="30"
+                />
+        </a>
+        <a class="btn btn-outline-light btn-floating m-1" href="https://www.youtube.com/channel/UCsdpNp0gM_q-SYzEmyXyBpw" role="button"
+          >
+          <img
+                    class="mb-4"
+                    src="img/youtube.png"
+                    alt=""
+                    width="30"
+                    height="30"
+                />
+         </a>
+        <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+          >
+          <img
+                    class="mb-4"
+                    src="img/instagram.png"
+                    alt=""
+                    width="30"
+                    height="30"
+                />
+          
+         </a>
+      </section>
     </div>
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-        © 2022 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/">PayTooWin</a>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-white" href="">PayTooWin.com</a>
     </div>
-</footer>
+  </footer>
