--- a/views/baned-account.ejs
+++ b/views/baned-account.ejs
@@ -1,25 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baned account</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-</head>
-<body>
-    <%- include ('header') %> 
-    <div class="form-group">
-        <form action="/baned-account" method="post">
-            <input type="text" name="sku" value=""/>
-            <select name="reason">
-                <option value="baned-account">ban account</option>
-            </select>
-            <textarea name="message"></textarea>
-            <input type="hidden" name="email" value=""/>
-            <input type="submit" value="enviar">
-        </form>
-    </div>
-    <%- include ('footer') %> 
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Baned account</title>
+        <link href="css/bootstrap.min.css" rel="stylesheet" />
+
+        <style>
+            .bd-placeholder-img {
+                font-size: 1.125rem;
+                text-anchor: middle;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                user-select: none;
+            }
+
+            @media (min-width: 768px) {
+                .bd-placeholder-img-lg {
+                    font-size: 3.5rem;
+                }
+            }
+        </style>
+        <link href="css/signin.css" rel="stylesheet" />
+    </head>
+    <body>
+        <%- include ('header') %>
+        <main class="form-signin">
+            <form id="registerForm" action="/baned-account" method="post">
+                <img
+                    class="mb-4"
+                    src="img/logo.svg"
+                    alt=""
+                    width="80"
+                    height="67"
+                />
+                <h1 class="h3 mb-3 fw-normal">Reporta</h1>
+                <div class="form-floating">
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="floatingPassword"
+                        name="sku"
+                        value=""
+                        placeholder="SKU"
+                    />
+                    <label for="floatingInput">SKU</label>
+                </div>
+
+                <div>
+                    <select name="reason">
+                        <option value="baned-account">ban account</option>
+                    </select>
+                </div>
+
+                <div class="form-floating2" style="padding: 30;">
+                    <textarea
+                        class="form-control"
+                        id="floatingInput"
+                        name="message"
+                        cols="15"
+                        rows="5"
+                        placeholder="Comente aquí"
+                    ></textarea>
+                    <input type="hidden" name="email" value="" />
+                </div>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">
+                    Reportar
+                </button>
+            </form>
+        </main>
+        <%- include ('footer') %>
+    </body>
 </html>
