--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,12 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Login</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-            crossorigin="anonymous"
-        />
+        <link href="css/bootstrap.min.css" rel="stylesheet" />
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
         <style>
             .bd-placeholder-img {
@@ -30,70 +26,100 @@
     </head>
 
     <body class="text-center">
-        <% if (login) { %> 
-            <%-include('header',{login:login,username:username}); -%> 
-        <% }else{ %> 
-            <%-include('header',{login:login}); -%> 
-        <%}%>
-        <main class="form-signin">
-            <form id="loginForm" action="/contact" method="POST">
-                <img
-                    class="mb-4"
-                    src="img/logo.svg"
-                    alt="logo"
-                    width="80"
-                    height="67"
-                />
-                <h1 class="h3 mb-3 fw-normal">Contacto</h1>
-                <div class="form-floating">
-                    <input
-                        type="email"
-                        class="form-control"
-                        id="floatingInput"
-                        name="email"
-                        placeholder="email"
+        <% if (login) { %> <%-include('header',{login:login,username:username});
+        -%> <% }else{ %> <%-include('header',{login:login}); -%> <%}%>
+
+        <div>
+            <main class="form-signin">
+                <form
+                    id="loginForm"
+                    action="https://formsubmit.co/5bf361f75deca1dfcedaa2ada4c3870b"
+                    method="POST"
+                >
+                    <img
+                        class="mb-4"
+                        src="img/logo.svg"
+                        alt=""
+                        width="80"
+                        height="67"
                     />
-                    <label for="floatingInput">Correo electronico</label>
-                </div>
-                <div class="form-floating">
+
+                    <h1 class="h3 mb-3 fw-normal">Formulario Contacto</h1>
+
+                    <div class="form-floating">
+                        <label for="floatingInput">Nombre</label>
+                        <input
+                            class="form-control"
+                            id="floatingInput"
+                            type="text"
+                            name="Nombre"
+                            placeholder="Ingrese su nombre"
+                        />
+                    </div>
+
+                    <div class="form-floating">
+                        <label for="floatingInput">Correo Electrónico</label>
+                        <input
+                            type="email"
+                            class="form-control"
+                            id="floatingInput"
+                            name="Email"
+                            placeholder="ingrese su email"
+                        />
+                    </div>
+
+                    <div class="form-floating">
+                        <label for="floatingInput">Asunto</label>
+                        <input
+                            class="form-control"
+                            id="floatingInput"
+                            type="text"
+                            name="Asunto"
+                        />
+                    </div>
+
+                    <div class="form-floating">
+                        <label for="floatingInput">Comentarios</label>
+                        <textarea
+                            class="form-control"
+                            id="floatingInput"
+                            name="Comentarios"
+                            cols="15"
+                            rows="5"
+                        ></textarea>
+                    </div>
+
+                    <div class="form-floating">
+                        <button
+                            onclick="mostrar()"
+                            class="w-100 btn btn-lg btn-primary"
+                            type="submit"
+                            value="Enviar"
+                        >
+                            Enviar
+                        </button>
+                    </div>
+
                     <input
-                        type="text"
-                        class="form-control"
-                        id="floatingInput"
-                        name="subject"
-                        placeholder="Asunto"
+                        type="hidden"
+                        name="_next"
+                        value="https://http://localhost:5000/"
                     />
-                    <label for="floatingInput">Asunto</label>
-                </div>
-                <div class="form-floating">
-                    <textarea
-                        class="form-control"
-                        id="floatingInput"
-                        name="text"
-                        placeholder="Ingresa aqui tu consulta"
-                    >
-                    </textarea>
-                    <label for="floatingPassword">Cúentanos</label>
-                </div>
-                <button class="w-100 btn btn-lg btn-primary" type="submit">
-                    Enviar
-                </button>
-            </form>
-        </main>
-        <%- include ('footer'); -%>
-        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <% if (alert) { %>
-        <script>
-            Swal.fire({
-                title: '<%=alertTitle%>',
-                text: '<%=alertMessage%>',
-                icon: '<%=alertIcon%>',
-                showConfirmButton: <%=showConfirmButton%>,
-                timer: <%=timer%>,
-            }).then(() => {
-                window.location = '/<%=ruta%>'
-            })
+                    <input type="hidden" name="_captcha" value="false" />
+                </form>
+            </main>
+        </div>
+
+        <script type="text/javascript">
+            function mostrar() {
+                swal('Enviado!','Espera por nuestra respuesta', 'success');
+            }
         </script>
-        <% } %>
+
+        <%- include ('footer'); -%>
+
+        <!-- <script src="view/contact.ejs"></script> -->
+        <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+        <!-- <script src="js/sweetalert.js"></script> -->
     </body>
 </html>
