--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -122,6 +122,7 @@
 </footer>
 
 -->
+
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -136,19 +137,24 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="css/index.css" />
+        <style>
+            .heading {
+                color: #ffffff;
+            }
+        </style>
     </head>
     <body>
-        <footer class="text-center text-lg-start bg-light text-muted" style="padding-top: 90px;">
-            <!-- Section: Social media -->
+        <footer
+            class="text-center text-lg-start bg-light text-muted"
+            style="padding-top: 90px"
+        >
             <section class="d-flex justify-content-center p-2 border-bottom">
                 <div class="container d-flex justify-content-center">
-                    <!-- Section: Social media -->
                     <section>
-                        <!-- Facebook -->
                         <a
                             class="btn btn-primary btn-floating m-1"
                             style="background-color: #3b5998"
-                            href="#!"
+                            href="https://www.facebook.com/darkorbit"
                             role="button"
                             ><svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -167,11 +173,10 @@
                             </svg>
                         </a>
 
-                        <!-- Twitter -->
                         <a
                             class="btn btn-primary btn-floating m-1"
                             style="background-color: #55acee"
-                            href="https://twitter.com/home"
+                            href="https://twitter.com/paytoowin_do"
                             role="button"
                         >
                             <svg
@@ -193,7 +198,6 @@
                             </svg>
                         </a>
 
-                        <!-- Google -->
                         <a
                             class="btn btn-primary btn-floating m-1"
                             style="background-color: #dd4b39"
@@ -218,11 +222,10 @@
                             </svg>
                         </a>
 
-                        <!-- Instagram -->
                         <a
                             class="btn btn-primary btn-floating m-1"
                             style="background-color: #c861e4e6"
-                            href="https://www.instagram.com/"
+                            href="https://www.instagram.com/darkorbit/"
                             role="button"
                         >
                             <svg
@@ -239,7 +242,6 @@
                             </svg>
                         </a>
 
-                        <!-- Linkedin -->
                         <a
                             class="btn btn-primary btn-floating m-1"
                             style="background-color: #0082ca"
@@ -259,7 +261,7 @@
                                 />
                             </svg>
                         </a>
-                        <!-- YouTube -->
+
                         <a
                             class="btn btn-primary btn-floating m-1"
                             style="background-color: #d70404"
@@ -280,24 +282,13 @@
                             </svg>
                         </a>
                     </section>
-                    <!-- Section: Social media -->
                 </div>
-                <!-- Left -->
-
-                <!-- Right -->
-
-                <!-- Right -->
             </section>
-            <!-- Section: Social media -->
 
-            <!-- Section: Links  -->
             <section class="">
                 <div class="container text-center text-md-start mt-5">
-                    <!-- Grid row -->
                     <div class="row mt-3">
-                        <!-- Grid column -->
                         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                            <!-- Content -->
                             <h6 class="text-uppercase fw-bold mb-4">
                                 <i class="fas fa-gem me-3"></i>Pay Too Win
                             </h6>
@@ -309,19 +300,20 @@
                                 Esteremos felíces de poder ayudarte!
                             </p>
                         </div>
-                        <!-- Grid column -->
 
-                        <!-- Grid column -->
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                            <!-- Links -->
                             <h6 class="text-uppercase fw-bold mb-4">
                                 Nosotros
                             </h6>
                             <p>
-                                <a href="/contact" class="text-reset">Contacto</a>
+                                <a href="/contact" class="text-reset"
+                                    >Contacto</a
+                                >
                             </p>
                             <p>
-                                <a href="/nosotros" class="text-reset">¿Quiénes Somos?</a>
+                                <a href="/nosotros" class="text-reset"
+                                    >¿Quiénes Somos?</a
+                                >
                             </p>
                             <p>
                                 <a href="#!" class="text-reset">---</a>
@@ -330,16 +322,13 @@
                                 <a href="#!" class="text-reset">---</a>
                             </p>
                         </div>
-                        <!-- Grid column -->
 
-                        <!-- Grid column -->
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                            <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">
-                                Reporta
-                            </h6>
+                            <h6 class="text-uppercase fw-bold mb-4">Reporta</h6>
                             <p>
-                                <a href="/baned-account" class="text-reset">Bugs</a>
+                                <a href="/baned-account" class="text-reset"
+                                    >Bugs</a
+                                >
                             </p>
                             <p>
                                 <a href="#!" class="text-reset">---</a>
@@ -351,16 +340,16 @@
                                 <a href="#!" class="text-reset">---</a>
                             </p>
                         </div>
-                        <!-- Grid column -->
 
-                        <!-- Grid column -->
                         <div
                             class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4"
                         >
-                            <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Contacto
+                            </h6>
                             <p>
-                                <i class="fas fa-home me-3"></i> Av. Silva 3244, Santiago, Chile
+                                <i class="fas fa-home me-3"></i> Av. Silva 3244,
+                                Santiago, Chile
                             </p>
                             <p>
                                 <i class="fas fa-envelope me-3"></i>
@@ -373,16 +362,12 @@
                                 <i class="fas fa-print me-3"></i> +569 5588 7744
                             </p>
                         </div>
-                        <!-- Grid column -->
                     </div>
-                    <!-- Grid row -->
                 </div>
             </section>
-            <!-- Section: Links  -->
 
-            <!-- Copyright -->
             <div
-                class="text-center p-4"
+                class="text-center p-4 heading"
                 style="background-color: rgba(0, 0, 0, 0.815)"
             >
                 © 2022 Copyright:
@@ -390,7 +375,6 @@
                     >PayTooWIn</a
                 >
             </div>
-            <!-- Copyright -->
         </footer>
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
