Actualizacion de tabla producto y formularios de Añadir/modificar producto, ademas de cambio en todas las validaciones de los formularios

--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -44,14 +44,14 @@
                     width="80"
                     height="67"
                 />
-                <h2 class="h3 mb-3 fw-normal">Añadir Producto</h2>
+                <h1 class="h3 mb-3 fw-normal">Añadir Producto</h1>
                 <div class="form-floating">
                     <input
                         type="number"
                         class="form-control"
                         id="floatingInput"
                         name="sku"
-                        placeholder="SKU"
+                        placeholder="sku"
                     />
                     <label for="floatingInput">SKU</label>
                 </div>
@@ -62,7 +62,7 @@
                         class="form-control"
                         id="floatingInput"
                         name="name"
-                        placeholder="Nombre"
+                        placeholder="nombre"
                     />
                     <label for="floatingInput">Nombre</label>
                 </div>
@@ -70,10 +70,30 @@
                     <input
                         type="text"
                         class="form-control"
-                        id="floatingPassword"
-                        name="description"
-                        placeholder="Descripción"
+                        id="floatingInput"
+                        name="game"
+                        placeholder="DarkOrbit"
                     />
+                    <label for="floatingPassword">Juego</label>
+                </div>
+                <div class="form-floating">
+                    <input
+                        type="number"
+                        class="form-control"
+                        id="floatingPassword"
+                        name="level"
+                        placeholder="Nivel"
+                    />
+                    <label for="floatingPassword">Nivel</label>
+                </div>
+                <div class="form-floating">
+                    <textarea
+                            class="form-control"
+                            id="floatingInput"
+                            name="description"
+                            cols="15"
+                            rows="20"
+                        ></textarea>
                     <label for="floatingPassword">Descripción</label>
                 </div>
                 <div class="form-floating">
