--- a/views/header.ejs
+++ b/views/header.ejs
@@ -17,9 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/"
-                        >Home</a
-                    >
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
                 </li>
 
                 <li class="nav-item">
@@ -56,7 +54,7 @@
                 </li>
             </ul>
 
-            <form action="/admin/find-product" method="POST" class="d-flex">
+            <form action="findProduct" method="POST" class="d-flex">
                 <input
                     type="search"
                     class="form-control me-2"
