Actualizacion de distintas vistas incluyendo header

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,7 +21,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/products">Compra</a>
+                    <a class="nav-link" href="/products">Catalogo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/carrito-compras">Carrito</a>
