--- a/views/product.ejs
+++ b/views/product.ejs
@@ -10,7 +10,7 @@
             integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
             crossorigin="anonymous"
         />
-        <title>Product</title>
+        <title><%=name%></title>
     </head>
    <center>
     <body>
@@ -21,7 +21,7 @@
                 <div class="card-body">
                     <h5 class="card-title">
                         <a
-                        href="/products/<%=sku%> "
+                        href=""
                         style="text-decoration: none; color: #000"
                         >
                         <%=name%>
