--- a/views/header.ejs
+++ b/views/header.ejs
@@ -36,7 +36,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" <% if (login) { %>
-                        <a href="#"> <%=username%> </a>
+                        <a href="/perfil"> <%=username%> </a>
                         <li class="nav-item">
                             <a class="nav-link" href="/logout">Cerrar Sesion</a>
                         </li>
