Opcion eliminar producto

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -35,6 +35,9 @@
                     >
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="/deleteProduct">Eliminar Producto</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" <% if (login) { %>
                         <a href="/perfil"> <%=username%> </a>
                         <li class="nav-item">
